objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Action</fullName>
                </value>
                <value>
                    <fullName>Counselor Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppointmentDuration__c</fullName>
        <label>Appointment Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppointmentStatus__c</fullName>
        <label>Appointment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDActivityType__c</fullName>
        <label>HUD Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HUDActivityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Purpose__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Households that received one-on-one counseling that also received education services.</fullName>
                </value>
                <value>
                    <fullName>Households that received information on fair housing, fair lending and/or accessibility rights.</fullName>
                </value>
                <value>
                    <fullName>Households for whom counselor developed a budget customized to a client’s current situation.</fullName>
                </value>
                <value>
                    <fullName>Households that improved their financial capacity (e.g. increased discretionary income, decreased debt load, increased savings, increased credit score, etc.) after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that gained access to resources to help improve their housing situation (e.g. down payment assistance, rental assistance, utility assistance, etc.) after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that gained access to non-housing resources (e.g. social service programs, legal services, public benefits such as Social Security or Medicaid, etc.) after receiving Housing Counseling Services</fullName>
                </value>
                <value>
                    <fullName>Homeless or potentially homeless households that obtained temporary or permanent housing after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households gained access to disaster recovery non-housing resources after receiving Housing Counseling Services (e.g. Red Cross/FEMA relief items, legal services, assistance).</fullName>
                </value>
                <value>
                    <fullName>Households obtained disaster recovery housing resources after receiving Housing Counseling Services (e.g. temporary shelter, homeowner rehab, relocation, etc.).</fullName>
                </value>
                <value>
                    <fullName>Households for whom counselor developed or updated an emergency preparedness plan.</fullName>
                </value>
                <value>
                    <fullName>Household that received rental counseling and avoided eviction after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that received rental counseling and improved living conditions after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that received pre-purchase/homebuying counseling and purchased housing after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that received reverse mortgage counseling and obtained a Home Equity Conversion Mortgage (HECM) after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that received non-delinquency post-purchase counseling that were able to improve home conditions or home affordability after receiving Housing Counseling Services</fullName>
                </value>
                <value>
                    <fullName>Households that prevented or resolved a forward mortgage default after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that prevented or resolved a reverse mortgage default after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that received a forward mortgage modification and remained current in their modified mortgage after receiving Housing Counseling Services.</fullName>
                </value>
                <value>
                    <fullName>Households that received a forward mortgage modification and improved their financial capacity after receiving Housing counseling Services.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless Assistance</fullName>
                </value>
                <value>
                    <fullName>Rental Topics</fullName>
                </value>
                <value>
                    <fullName>Pre-purchase/Homebuying</fullName>
                </value>
                <value>
                    <fullName>Non-Delinquency Post-Purchase</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Forward Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Reverse Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Disaster Preparedness Assistance</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Assistance</fullName>
                </value>
                <value>
                    <fullName>Not HUD-Reportable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdditionalInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SUMO Additional Info</label>
        <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationType__c</fullName>
        <label>Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__OrganizerFullName__c</fullName>
        <formula>BLANKVALUE(sumoapp__AdditionalInfo__r.sumoapp__AlternateHostName__c, (sumoapp__AdditionalInfo__r.sumoapp__Organizer__r.FirstName &amp; &apos; &apos; &amp; sumoapp__AdditionalInfo__r.sumoapp__Organizer__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__OrganizerTitle__c</fullName>
        <formula>sumoapp__AdditionalInfo__r.sumoapp__Organizer__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizer Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringStartDate__c</fullName>
        <label>Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sumoapp__StartDateTimeTimezone__c</fullName>
        <label>Start DateTime Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__SumoId__c</fullName>
        <label>Sumo Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__TimeZoneSidKey__c</fullName>
        <label>TimeZoneSidKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhoIdIsNotArrived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It shows whether the attendee has arrived at the event or not</description>
        <inlineHelpText>Please check this box if participant booked to attend but was a no show to the scheduled appt/event</inlineHelpText>
        <label>WhoId Is Not Arrived</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>